<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_title_label"/>



    <EditText
        android:id="@+id/order_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/order_title_hint"
        android:autofillHints=""
        android:inputType="number" />
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_details_label"
        />
    <Button
        android:id="@+id/order_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <CheckBox
        android:id="@+id/order_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_done_label"/>
    <CheckBox
        android:id="@+id/order_oxidation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_oxidation_label"/>
    <CheckBox
        android:id="@+id/order_heat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_heat_label"/>
</LinearLayout>